Adding source code of my personal Portfolio Website

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </div>
                     <div class="info-box">
                         <i class='bx bxl-gmail' ></i>
-                        <span>shivangbaranwal4@gmail.com</span>
+                        <span>ABCDFRE4@gmail.com</span>
                     </div>
                 </div>
                 <a href="#" class="btn">Download CV</a>
